# bachelor

./: README.md  package.xml  setup.py
bachelor/: camera_node.py  package.xml  setup.cfg  setup.py  system_node.py  webcam_pub.py
bachelor/bachelor/: system_node.py
bachelor_interfaces/: CMakeLists.txt  package.xml
bachelor_interfaces/action/: CondSetDevice.action
bachelor_interfaces/srv/: SetDevice.srv
dynamixel_code/: CMakeLists.txt  package.xml
dynamixel_code/include/: control_node.hpp
dynamixel_code/src/: control_node.cpp
