<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bachelor</name>
  <version>0.0.0</version>
  <description>My bachelor thesis project. A system which using a webcam controls a motor.</description>
  <maintainer email="andma20@student.sdu.dk">andma20</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>bachelor_interfaces</build_depend>
  <exec_depend>bachelor_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
