<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_code</name>
  <version>3.7.40</version>
  <description>A ROS2 node for controlling the motor in my bachelor project</description>
  <license>Apache 2.0</license>
  <author email="scma@mmmi.sdu.dk">Anders Schack Madsen</author>
  <maintainer email="scma@mmmi.sdu.dk">Anders Schack Madsen</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_sdk/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/DynamixelSDK</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>bachelor_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
